# sql_srs

./: .gitignore  app.py  pyproject.toml
.github/workflows/: check_code_quality.yaml
answers/: beverages_and_food.sql  customer_orders.sql  get_top_customers.sql  sizes_and_trademarks.sql  total_price_per_beverage.sql
