[project]
name = "sql-srs"
version = "0.1.0"
description = ""
authors = [
    {name = "clepadellec",email = "clepadellec@crossdata.tech"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)"
]

[packages]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
